# quorum-quest

./: .gitignore  README.md  buf.gen.yaml  cover.sh  docker-compose.yml  go.mod  go.sum  integration.sh
.github/workflows/: codecov yml  codecov.yml
.trunk/: trunk.yaml
api/proto/: buf.yaml
api/proto/v1/: quorum_quest_api.proto
client/go/quorum-quest-client/: README.md  client.go
client/python/: README  pyproject.toml  setup-all.sh  setup.py  setup.sh  symlink_proto.sh
client/python/example/: main.py
client/python/quorum_quest_client/: client.py  (+1 more)
client/python/quorum_quest_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
client/rust/: Cargo.toml  README.md
client/rust/example/: Cargo.toml
client/rust/example/src/: main.rs
client/rust/quorum-quest-client/: Cargo.toml  build.rs
client/rust/quorum-quest-client/src/: lib.rs
cmd/quorum-quest-service/: main.go
internal/config/: config.go  config_test.go  detector.go  detector_test.go  env_test.go  loader.go  loader_test.go  loaders.go  types.go  utils.go  utils_test.go  validator.go  watcher.go
internal/lockservice/: callbacks.go  lockservice.go  lockservice_test.go  mock_test.go
internal/observability/: config_test.go  logger.go  logger_enhanced_test.go  logger_test.go  metrics_test.go  observability.go  observability_test.go  observabilityconfig.go
internal/server/: server.go  server_additional_test.go  server_dynamodb_test.go  server_redis_test.go  server_scylladb_test.go  server_test.go
internal/store/: errors.go  errors_test.go  lock_store.go  store.go  store_test.go  storeconfig.go
(+49 files in other folders)
