# client/rust/example/Cargo.toml

[package]
name = "quorum-quest-example"
version = "0.1.0"
edition = "2021"

[dependencies]
quorum-quest-client = { path = "../quorum-quest-client" }
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
async-trait = "0.1.77"
log = "0.4.20"
env_logger = "0.10.1"
futures = "0.3.30"
ctrlc = "3.4.2"
thiserror = "1.0.56"