# client/rust/quorum-quest-client/Cargo.toml

[package]
name = "quorum-quest-client"
version = "0.1.0"
edition = "2021"
authors = ["Quorum Quest Team <aviv.laufer@gmail.com"]
description = "Rust client for the Quorum Quest leader election service"
license = "MIT"
repository = "https://github.com/avivl/quorum-quest"

[dependencies]
tonic = "0.10.2"
prost = "0.12.3"
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
uuid = { version = "1.6.1", features = ["v4"] }
log = "0.4.20"
prost-types = "0.12.3"
async-trait = "0.1.77"
thiserror = "1.0.56"

[build-dependencies]
tonic-build = "0.10.2"